package edu.fiuba.algo3.modelo.modificador;

public interface Sorpresa {

    int aplicarSorpresa(long movimientos);

}
