@startuml modelo-actual

class Tablero {
    + mover(dir: Direccion)
    + agregarVehiculo(veh: Vehiculo)
    + obtenerPosicion(): Celda
    + iniciarEn(celda: Celda)
}

class Calle {
    + cruzarCon(veh: Vehiculo)
    + proximaEsquina(esquinaActual: Celda): Celda
    + contiene(esquina: Celda): Boolean
    + agregarCelda(esquina: Celda)
}

abstract Vehiculo {
    - movimientos: long

    + {abstract} reemplazarVehiculo(): Vehiculo
    + {abstract} pozo()
    + {abstract} piquete()
    + {abstract} controlPolicial()
    + sorpresa(sorpresa: Sorpresa)
    + sumarMovimientos()
    + mover(dir: Direccion)
}

interface Sorpresa {
    + {abstract} aplicar(mov: long)
}

interface Modificador {
    + {abstract} cruzarCon(veh: Vehiculo)
}

class Celda {
    - f: Int
    - c: Int

    - obtenerEsquinas(): Array<Celdas>
    - obtenerCalleDeEsquina(esquina: Celda): Calle
    + agregarCalle(calle: Calle)
    + mover(veh: Vehiculo, dir: Direccion): Celda
}

class Registro {

}

class GeneradorDeCiudad {
    - filas: Int
    - columnas: Int
    + buscarCelda(celda: Celda): Celda
    - generarCeldas():
    - generarCaminos():
    - agregarCeldas(esq1: Celda, esq2: Celda, mod: Modificador)
}

interface Direccion {
    + {abstract} mover(f, c, esquinas: Array<Celdas>): Celda
}

Calle .up.> Vehiculo
Celda .left.> Vehiculo
Vehiculo ..> Direccion
Vehiculo .up.> Sorpresa
Tablero -left- Vehiculo
Tablero --> GeneradorDeCiudad
GeneradorDeCiudad .down.> Celda
Vehiculo --> Celda
Tablero -up-> Registro
Calle -up-> Modificador
Modificador .right.> Vehiculo
Celda "2" -left- "4" Calle
Tablero ..> Direccion
Celda .right.> Direccion

@enduml

@startuml interface-direccion

interface Direccion {
    + {abstract} mover(f, c, esquinas: Array<Celdas>): Celda
}

class Arriba {
    + mover(f, c, esquinas: Array<Celdas>): Celda
}

class Abajo {
    + mover(f, c, esquinas: Array<Celdas>): Celda
}

class Derecha {
    + mover(f, c, esquinas: Array<Celdas>): Celda
}

class Izquierda {
    + mover(f, c, esquinas: Array<Celdas>): Celda
}

Arriba ..|> Direccion
Abajo ..|> Direccion
Derecha .up.|> Direccion
Izquierda .up.|> Direccion

@enduml

@startuml interface-vehiculo

abstract Vehiculo {
    - movimientos: long

    + {abstract} reemplazarVehiculo(): Vehiculo
    + {abstract} pozo()
    + {abstract} piquete()
    + {abstract} controlPolicial()
    + sorpresa(sorpresa: Sorpresa)
    + sumarMovimientos()
    + mover(dir: Direccion)
}

class 4x4 { 
    + pozo()
    + piquete()
    + controlPolicial()
    + reemplazarVehiculo()
}

class Moto {
    + pozo()
    + piquete()
    + controlPolicial()
    + reemplazarVehiculo()
}

class Auto {
    + pozo()
    + piquete()
    + controlPolicial()
    + reemplazarVehiculo()
}

4x4 -up-|> Vehiculo
Auto --|> Vehiculo
Moto --|> Vehiculo

@enduml

@startuml interface-modificador-sorpresa

interface Modificador {
    + {abstract} cruzarCon(veh: Vehiculo)
}

class Pozo {
    + cruzarCon(veh: Vehiculo)
}

class ControlPolicial {
    + cruzarCon(veh: Vehiculo)
}

class Piquete {
    + cruzarCon(veh: Vehiculo)
}

class Favorable {
    + cruzarCon(veh: Vehiculo)
}

class Desfavorable {
    + cruzarCon(veh: Vehiculo)
}

class CambioDeVehiculo {
    + cruzarCon(veh: Vehiculo)
}

class Nulo {
    + cruzarCon(veh: Vehiculo)
}

Favorable ..|> Modificador
Desfavorable .left.|> Modificador
CambioDeVehiculo .up.|> Modificador
Pozo .right.|> Modificador
Piquete ..|> Modificador
ControlPolicial .up.|> Modificador
Nulo ..|> Modificador

@enduml